<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBMI"
        android:text="@string/bmi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnCalories"
        android:text="@string/calories"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnChart"
        android:text="@string/bmi_chart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnShoppingList"
        android:text="@string/shopping_list"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
